# entities/user.go
@@ -13,3 +13,25 @@ type UserListResp struct {
 	ErrorMsg  string              `json:"error_msg"`
 	Result    map[string][]string `json:"result"`
 }
+
+type AddFaceStorage struct {
+	Image     string `json:"image"`
+	ImageType string `json:"image_type"`
+	GroupID   string `json:"group_id"`
+	UserID    string `json:"user_id"`
+}
+
+type AddFaceResp struct {
+	ErrorCode int32  `json:"error_code"`
+	ErrorMsg  string `json:"error_msg"`
+	Result    struct {
+		FaceToken string `json:"face_token"`
+		Location  struct {
+			Left     float32 `json:"left"`
+			Top      float32 `json:"top"`
+			Width    float32 `json:"width"`
+			Height   float32 `json:"height"`
+			Rotation float32 `json:"rotation"`
+		} `json:"location"`
+	} `json:"result"`
+}
