# routers/commentsRouter_controllers.go
@@ -9,6 +9,15 @@ func init() {
 
     beego.GlobalControllerRouter["gofa/controllers:GroupController"] = append(beego.GlobalControllerRouter["gofa/controllers:GroupController"],
         beego.ControllerComments{
+            Method: "AddFace",
+            Router: `/addface`,
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["gofa/controllers:GroupController"] = append(beego.GlobalControllerRouter["gofa/controllers:GroupController"],
+        beego.ControllerComments{
             Method: "UserList",
             Router: `/userlist`,
             AllowHTTPMethods: []string{"post"},
